--- a/templates/account/dashboard_sidebar.html
+++ b/templates/account/dashboard_sidebar.html
@@ -6,7 +6,7 @@
         <div class="user-info">
             <div class="user-info-top">
                 <div class="user-name">
-                    {{ user.get_short_name }}
+                    {{ user.get_short_name }} 님
                 </div>
                 <div class="change-info">
                     <a href="{% url 'change_info' %}">정보수정</a>
@@ -14,7 +14,7 @@
             </div>
             <div class="user-info-bottom">
                 <div class="user-message">
-                    메세지 <span>(3)</span>
+                    메세지 <span>(0)</span>
                 </div>
             </div>
         </div>
